src/Test/Fixtures/Bad/TypeQualifier/missingClosingParenInLinearScratchQalloc.lf
let linear scratch qs = qalloc(2;
